k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loginserver-real
  labels:
    app: loginserver-real
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loginserver-real
  template:
    metadata:
      labels:
        app: loginserver-real
    spec:
      containers:
        - name: loginserver-real
          image: yklee2002/loginserver-real:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: loginserver-real-service
  labels:
    app: loginserver-real
spec:
  type: NodePort
  selector:
    app: loginserver-real
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30115
